--- a/templates/404.html
+++ b/templates/404.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Droid+Serif|Source+Sans+Pro"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <div id="container"></div>
+    <div class="bg">
+      <img src="images/404.png" alt="404 Error image" />
+    </div>
+    <div>{{error}}</div>
   </body>
 </html>
